EditXT
Copyright (c) 2007-2010 Daniel Miller <millerdev@gmail.com>

This file is part of EditXT, a programmer's text editor for Mac OS X,
which can be found at http://editxt.org/.

EditXT is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

EditXT is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with EditXT.  If not, see <http://www.gnu.org/licenses/>.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This file contains notable new features and other large changes. See
the source repository for the gory details of what actually happened.

????-??-?? - 1.x.x
  - Added non-padded (un)comment text command. This is now the default comment
    mode (SHIFT+COMMA). Moved old command to SHIFT+COMMAND+COMMA.
  - Fixed bug in backspace at end of line with trailing whitespace.
  - Fixed bug in document auto-reload which caused a prompt to "Save As..."
    on next save.

2010-10-13 - 1.0.1 - Fixed undo and document pane hover bugs.

2010-08-16 - 1.0.0 - Added GPLv3 license and released on github.com

2007-12-29 - Initial development. During this period, as soon as it was
    functional enough for day-to-day use, EditXT was used as the primary
    editor with which to further develop itself. In addition to that,
    EditXT was also used on a daily basis for other software development.
